# fsys

./: .gitignore  CMakeLists.txt  README.md  docs.md  fpm.toml  index.html  search.html
.github/workflows/: cmake.yml  doc-deployment.yml  fpm.yml
cfsys/: CMakeLists.txt
cfsys/include/: fsys.h  regular_expressions.h
cfsys/install/: CMakeLists.txt  cfsysConfig.cmake.in  template.pc
cfsys/src/: CMakeLists.txt  regular_expressions.cpp
cmake/: helper.cmake
configure/: CMakeLists.txt  template.cmake
dependencies/: CMakeLists.txt
dependencies/fstring/: CMakeLists.txt
include/: helper_macros.h
install/: fsysConfig.cmake.in
interface/: adjustl.html  adjustr.html  assignment(=).html  char.html  find_all_files.html  get_directory_contents.html  index.html  insert.html  len.html  len_trim.html  operator(==).html  operator(SLASH=).html  operator(SLASHSLASH).html  regex_match.html  regex_search.html  remove.html  replace.html  scan.html  split_path.html  split_string.html  string_to_int.html  string_to_real.html  to_c_string.html  to_lower.html  to_string.html  to_upper.html  trim.html
lists/: files.html  modules.html  procedures.html  types.html
module/: fsys.html  strings.html
proc/: get_current_work_directory.html
sourcefile/: fsys.f90.html  strings.f90.html
src/: CMakeLists.txt  fsys.cpp  fsys.f90  regular_expressions.cpp  strings.f90
test/: CMakeLists.txt  c_fsys_test.cpp  c_fsys_test.h  fsys_test.f90  fsys_test_routines.f90  string_tests.f90
tipuesearch/: tipuesearch_content.js
type/: directory_contents.html  file_path.html  string.html  string_builder.html
